--- a/package.json
+++ b/package.json
@@ -21,21 +21,11 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsc && chmod +x ./dist/cli.js && cp -r src/styles dist/",
-    "clean": "rm -rf dist",
-    "prebuild": "npm run clean",
-    "watch": "tsc -w",
+    "build": "rm -rf dist && tsc && chmod +x ./dist/cli.js && cp -r src/styles dist/",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
     "lint": "eslint src --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm run lint && npm test",
-    "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
-    "postversion": "git push && git push --tags",
-    "postinstall": "chmod +x ./dist/cli.js"
+    "prepublish": "npm run lint && npm test && npm run build"
   },
   "keywords": [
     "agda",
@@ -52,8 +42,8 @@
     "@types/jest": "^29.5.0",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.11.24",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
     "eslint": "^8.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
