--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "test": "jest --passWithNoTests",
     "lint": "eslint src --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
-    "prepublish": "npm run lint && npm test && npm run build"
+    "prepublish": "npm run lint && npm test && npm run build",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "keywords": [
     "agda",
