--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -25,7 +25,7 @@ jobs:
       - run: npm run prepublish
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_SECRET}}
       
       # Create GitHub Release automatically if triggered by a tag
       - name: Create Release
