--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lint": "eslint src --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\"",
+    "prepare": "husky",
     "preversion": "npm run lint && npm run format && npm test && npm run build",
     "prepublishOnly": "npm test && npm run build",
     "postversion": "git push && git push --tags"
@@ -49,7 +50,9 @@
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "eslint": "^8.0.0",
+    "husky": "^9.1.7",
     "jest": "^29.5.0",
+    "lint-staged": "^15.5.2",
     "prettier": "^3.0.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.3.3"
@@ -58,5 +61,11 @@
     "commander": "^12.0.0",
     "fs-extra": "^11.1.1",
     "jsdom": "^24.0.0"
+  },
+  "lint-staged": {
+    "src/**/*.ts": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
