--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\"",
     "prepare": "husky",
-    "preversion": "npm run lint && npm run format && npm test && npm run build",
+    "release": "./scripts/release.sh",
+    "preversion": "npm run lint && npm run format && npm test",
     "prepublishOnly": "npm test && npm run build",
     "postversion": "git push && git push --tags"
   },
