--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -4,16 +4,16 @@ on:
   workflow_call:
     inputs:
       input-dir:
-        description: 'Directory containing the HTML files to transform'
+        description: 'Directory containing HTML files to transform'
         required: true
         type: string
       output-dir:
-        description: 'Directory to output the transformed HTML files'
+        description: 'Output directory (defaults to in-place transformation)'
         required: false
         type: string
         default: ''
       config-file:
-        description: 'Path to the agda-docs configuration file'
+        description: 'Path to agda-docs config file'
         required: false
         type: string
         default: 'agda-docs.config.json'
@@ -23,7 +23,7 @@ on:
         type: string
         default: ''
       modules:
-        description: 'Comma-separated list of module prefixes'
+        description: 'Comma-separated module prefixes'
         required: false
         type: string
         default: ''
@@ -32,41 +32,22 @@ on:
         required: false
         type: string
         default: ''
-      node-options:
-        description: 'Node.js options for memory/performance tuning'
-        required: false
-        type: string
-        default: '--max-old-space-size=2048'
-      upload-artifact:
-        description: 'Whether to upload the transformed files as an artifact'
-        required: false
-        type: boolean
-        default: true
       artifact-name:
-        description: 'Name for the uploaded artifact'
+        description: 'Name for uploaded artifact'
         required: false
         type: string
         default: 'agda-docs-transformed'
-      retention-days:
-        description: 'Number of days to retain the artifact'
-        required: false
-        type: number
-        default: 30
 
     outputs:
       files-processed:
-        description: 'Number of HTML files that were processed'
+        description: 'Number of HTML files processed'
         value: ${{ jobs.transform.outputs.files-processed }}
       output-directory:
-        description: 'Directory containing the transformed HTML files'
+        description: 'Directory containing transformed files'
         value: ${{ jobs.transform.outputs.output-directory }}
-      artifact-name:
-        description: 'Name of the uploaded artifact (if upload-artifact is true)'
-        value: ${{ inputs.artifact-name }}
 
 jobs:
   transform:
-    name: 'Transform Agda HTML Documentation'
     runs-on: ubuntu-latest
     outputs:
       files-processed: ${{ steps.transform.outputs.files-processed }}
@@ -78,7 +59,7 @@ jobs:
 
       - name: 🔄 Transform Agda documentation
         id: transform
-        uses: ./
+        uses: will-break-it/agda-web-docs-lib@v0.7.1
         with:
           input-dir: ${{ inputs.input-dir }}
           output-dir: ${{ inputs.output-dir }}
@@ -86,21 +67,16 @@ jobs:
           back-button-url: ${{ inputs.back-button-url }}
           modules: ${{ inputs.modules }}
           github-url: ${{ inputs.github-url }}
-          node-options: ${{ inputs.node-options }}
 
       - name: 📤 Upload transformed documentation
-        if: inputs.upload-artifact && steps.transform.outputs.files-processed > 0
+        if: steps.transform.outputs.files-processed > 0
         uses: actions/upload-artifact@v4
         with:
           name: ${{ inputs.artifact-name }}
           path: ${{ steps.transform.outputs.output-directory }}
-          retention-days: ${{ inputs.retention-days }}
 
-      - name: 📊 Output summary
+      - name: ✅ Summary
         run: |
-          echo "✅ Transformation completed!"
+          echo "🎉 Transformation complete!"
           echo "Files processed: ${{ steps.transform.outputs.files-processed }}"
-          echo "Output directory: ${{ steps.transform.outputs.output-directory }}"
-          if [ "${{ inputs.upload-artifact }}" = "true" ] && [ "${{ steps.transform.outputs.files-processed }}" -gt "0" ]; then
-            echo "Artifact uploaded as: ${{ inputs.artifact-name }}"
-          fi 
+          echo "Output directory: ${{ steps.transform.outputs.output-directory }}" 
