--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,17 +38,29 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Create test files
+    - name: Create realistic test HTML
       run: |
         mkdir -p test-html/
         cat > test-html/index.html << 'EOF'
         <!DOCTYPE html>
-        <html>
-        <head><title>Test</title></head>
+        <html lang="en">
+        <head>
+          <meta charset="UTF-8">
+          <title>Test Module</title>
+          <link rel="stylesheet" href="Agda.css">
+        </head>
         <body>
-          <pre class="Agda">
-          <span class="Keyword">module</span> <span class="Module">Test</span> <span class="Keyword">where</span>
-          </pre>
+          <h1>Test Module</h1>
+          <div class="body">
+            <pre class="Agda">
+              <a id="1" class="Symbol">{-#</a> <a id="4" class="Keyword">OPTIONS</a> <a id="12" class="Pragma">--safe</a> <a id="19" class="Symbol">#-}</a>
+              <a id="23" class="Keyword">module</a> <a id="30" class="Module">Test</a> <a id="35" class="Keyword">where</a>
+
+              <a id="42" class="Keyword">data</a> <a id="47" class="Datatype">ℕ</a> <a id="49" class="Symbol">:</a> <a id="51" class="PrimitiveType">Set</a> <a id="55" class="Keyword">where</a>
+                <a id="63" class="InductiveConstructor">zero</a> <a id="68" class="Symbol">:</a> <a id="70" class="Datatype">ℕ</a>
+                <a id="74" class="InductiveConstructor">suc</a>  <a id="79" class="Symbol">:</a> <a id="81" class="Datatype">ℕ</a> <a id="83" class="Symbol">→</a> <a id="85" class="Datatype">ℕ</a>
+            </pre>
+          </div>
         </body>
         </html>
         EOF
@@ -62,8 +74,30 @@ jobs:
 
     - name: Validate transformation
       run: |
-        if ! grep -q 'class="sidebar"' test-html/index.html; then
-          echo "❌ Transformation failed"
+        echo "Checking transformed HTML..."
+        
+        # Check that CSS files were copied
+        if [ ! -f "test-html/base.css" ]; then
+          echo "❌ base.css not found"
           exit 1
         fi
+        
+        # Check that JS files were copied  
+        if [ ! -f "test-html/themeInit.js" ]; then
+          echo "❌ themeInit.js not found"
+          exit 1
+        fi
+        
+        # Check that HTML was transformed (should have theme scripts)
+        if ! grep -q 'themeInit.js' test-html/index.html; then
+          echo "❌ Theme script not linked"
+          exit 1
+        fi
+        
+        # Check for search functionality
+        if ! grep -q 'search.js' test-html/index.html; then
+          echo "❌ Search script not linked"
+          exit 1
+        fi
+        
         echo "✅ GitHub Action test passed" 
