--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "agda-web-docs-lib": "^0.7.1",
     "commander": "^12.0.0",
     "fs-extra": "^11.1.1",
     "jsdom": "^24.0.0"
