--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "format:check": "prettier --check \"src/**/*.ts\"",
     "prepare": "husky",
     "release": "./scripts/release.sh",
-    "preversion": "npm run lint && npm run format && npm test",
+    "preversion": "npm run build && npm run lint && npm run format && npm test",
     "prepublishOnly": "npm test && npm run build",
     "postversion": "git push && git push --tags"
   },
