fix: remove postversion script that conflicts with CI detached HEAD state

--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "prepare": "husky",
     "release": "./scripts/release.sh",
     "preversion": "npm run build && npm run lint && npm run format && npm test",
-    "prepublishOnly": "npm test && npm run build",
-    "postversion": "git push && git push --tags"
+    "prepublishOnly": "npm test && npm run build"
   },
   "keywords": [
     "agda",
