fix: ensure npm commands run in action directory - Add cd $GITHUB_ACTION_PATH before npm install/build commands - Fixes issue where action was trying to find package.json in caller's directory

--- a/action.yml
+++ b/action.yml
@@ -67,6 +67,7 @@ runs:
     - name: 🔨 Build local package
       shell: bash
       run: |
+        cd $GITHUB_ACTION_PATH
         echo "Installing dependencies and building local package..."
         npm install
         npm run build
