perf: reduce batch size and enable GC for better memory management
- Reduce batch size from 50 to 25 files for lower peak memory
- Add --expose-gc to default node options so GC hints work
- This should help with large documentation sets (600+ files)

Related to #1

--- a/action.yml
+++ b/action.yml
@@ -33,7 +33,7 @@ inputs:
   node-options:
     description: "Node.js options (e.g., --max-old-space-size=4096 for large documentation sets)"
     required: false
-    default: "--max-old-space-size=2048"
+    default: "--max-old-space-size=2048 --expose-gc"
   cache-dependency-path:
     description: "Path to package-lock.json for npm caching (if not provided, caching will be disabled)"
     required: false
